Composer's table cell properties' dialog did not allow to reset width and hight and the switch between TD and TH did not work (regression): b=230165, r=timeless, sr=dbaron